samples/_failures_safe/1761290674_036324_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8e54b84.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c8e54b84.c:189:9: error: expected expression at end of input
  189 |         if (
      |         ^~
./samples/SAFE/__tmp_c8e54b84.c:189:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8e54b84.c:189:9: error: expected declaration or statement at end of input
